--- a/index.html
+++ b/index.html
@@ -5,23 +5,51 @@
   <title>Single Pages</title>
   <meta charset="utf-8" />
   <script type="text/javascript" src='http://exportsjs.u.qiniudn.com/require.js'></script>
-  <script type="text/javascript" src='http://exportsjs.u.qiniudn.com/marked.js'></script>
+  <link rel="stylesheet" type="text/css" href="http://exportsjs.u.qiniudn.com/markdown.css">
+  <link rel="stylesheet" type="text/css" href="style/style.css">
   <script type="text/javascript">
     require.config({
       baseUrl: './',
-      map: {
-        exportsjs: 'http://exportsjs.u.qiniudn.com'
+      maps: {
+        '*': {
+          exportsjs: 'http://exportsjs.u.qiniudn.com'
+        }
       },
       paths: {
-        cirru: 'exportsjs/cirru-parser',
-        marked: 'exportsjs/marked',
-        
+        marked: 'http://exportsjs.u.qiniudn.com/marked',
+        text: 'http://exportsjs.u.qiniudn.com/requirejs-text'
       }
     })
   require(['src/main'])
   </script>
 </head>
 <body>
+  <div id="doc">
+    <div id="readme"></div>
+  <div id="disqus_thread"></div>
+    <script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+        var disqus_shortname = 'singlepageapps'; // required: replace example with your forum shortname
 
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function() {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+  </div>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-41753901-9', 'coffee-js.github.io');
+    ga('send', 'pageview');
+
+  </script>
 </body>
 </html>
