--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
   <title>Single Pages</title>
   <meta charset="utf-8" />
   <script type="text/javascript" src='http://exportsjs.u.qiniudn.com/require.js'></script>
-  <link rel="stylesheet" type="text/css" href="http://exportsjs.u.qiniudn.com/markdown.css">
   <link rel="stylesheet" type="text/css" href="style/style.css">
   <script type="text/javascript">
     require.config({
       baseUrl: './',
-      maps: {
+      map: {
         '*': {
           exportsjs: 'http://exportsjs.u.qiniudn.com'
         }
